--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Breve descripción del sitio que se verá en los resultados de búsqueda -->
     <meta name="description" content="Sitio web de prueba elaborado en el curso de Confección y Publicación de Páginas Web (IFCD0110). Unidad Formativa UF1306 Pruebas de funcionalidades y optimización de páginas web" />
     <!-- Ruta al favicon -->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="shortcut icon" href="assets/img/dacor.png" type="image/vnd.microsoft.icon" />
     <!-- Ruta a las hojas de estilos -->
     <link rel="stylesheet" type="text/css" href="assets/css/application.css" />
     <!-- Título de la pestaña del navegador -->
@@ -56,7 +56,7 @@
             </li>
         </ul>
     </nav>
-    <main>
+    <main id="mein">
         <section class="tema textos agua justify">
             <header class="portada" style="background-image: url('https://cdn.pixabay.com/photo/2016/11/17/23/29/programming-1832991_960_720.png');">
                 <h2>Pruebas y optimización de páginas web</h2>
