--- a/temas/formularios1.html
+++ b/temas/formularios1.html
@@ -16,7 +16,7 @@
     <!-- Breve descripción del sitio que se verá en los resultados de búsqueda -->
     <meta name="description" content="Sitio web de prueba elaborado en el curso de Confección y Publicación de Páginas Web (IFCD0110). Unidad Formativa UF1306 Pruebas de funcionalidades y optimización de páginas web" />
     <!-- Ruta al favicon -->
-    <link rel="shortcut icon" href="assets/img/dacor.png" type="image/vnd.microsoft.icon" />
+    <link rel="shortcut icon" href="../assets/img/dacor.png" type="image/vnd.microsoft.icon" />
     <!-- Ruta a las hojas de estilos -->
     <link rel="stylesheet" type="text/css" href="../assets/css/application.css" />
     <!-- Título de la pestaña del navegador -->
@@ -26,7 +26,7 @@
 <body>
     <!-- El header es la cabecera de la página web lleva el único encabezado h1 de la página -->
     <header>
-        <a href="index.html" title="Página principal">
+        <a href="../index.html" title="Página principal">
             <figure class="logo"></figure>
             <h1>Validación de Formularios (UF1306)</h1>
         </a>
@@ -44,7 +44,7 @@
             <li><a href="#">Temas</a>
                 <ul>
                     <li>
-                        <a href="temas/formularios1.html">Formularios I</a>
+                        <a href="../temas/formularios1.html">Formularios I</a>
                     </li>
                 </ul>
             </li>
@@ -84,7 +84,7 @@
                     </div>
                     <button id="submitButton" disabled>Send</button>
                     </form>
-                    <script src="scripts.js"></script>
+                    <script src="../assets/js/formularios1.js"></script>
                     <section class="contentinfo justify">
                     </div>
                     <a href="../index.html" target="_blank" title="Ver o sitio web de UF1303" class="no-border pattern abcenter">
