--- a/temas/formularios1.html
+++ b/temas/formularios1.html
@@ -109,6 +109,11 @@
                                         placeholder="email"
                                         name="email" id="email" />
                                     </li>
+                                    <li>
+                                        <label for="edad">Edad</label>
+                                        <input type="number" placeholder="edad" name="edad" id="edad">
+
+                                    </li>
                                     <li class="radio">
                                         <input type="radio" name="genero"     value="h" id="hombre" />
                                         <label for="hombre">Hombre</label>
