--- a/temas/formularios1.html
+++ b/temas/formularios1.html
@@ -48,6 +48,9 @@
                     <li>
                         <a href="../temas/formularios1.html">Formularios I</a>
                     </li>
+                    <li>
+                        <a href="../temas/formularios2.html">Formularios II</a>
+                    </li>
                 </ul>
             </li>
             <li>
