--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
     <main id="mein">
         <section class="tema textos agua justify">
-            <header class="portada" style="background-image: url('https://cdn.pixabay.com/photo/2016/11/17/23/29/programming-1832991_960_720.png');">
+            <header class="portada" style="background-image: url('https://cdn.pixabay.com/photo/2015/08/04/10/00/chickens-874507_960_720.jpg');">
                 <h2>Pruebas y optimización de páginas web</h2>
             </header>
             <article class="article index">
