--- a/temas/formularios2.html
+++ b/temas/formularios2.html
@@ -104,7 +104,7 @@
                                         <!-- title="Sólo se admiten letras del alfabeto español y espacios en blanco" -->
                                         <input type="text" 
                                         placeholder="nombre"
-                                        name="name" id="name" />
+                                        name="name" id="name" required />
                                     </li>
                                     <li>
                                         <label for="email">E-mail:</label>
