--- a/temas/formularios2.html
+++ b/temas/formularios2.html
@@ -110,12 +110,17 @@
                                         <label for="email">E-mail:</label>
                                         <input type="email" 
                                         placeholder="email"
-                                        name="email" id="email" />
+                                        name="email" id="email" required />
                                     </li>
                                     <li>
                                         <label for="edad">Edad</label>
                                         <input type="number" placeholder="edad" name="edad" id="edad">
-
+                                    </li>
+                                    <li>
+                                        <label for="tfno">Teléfono</label>
+                                        <input type="text"
+                                            placeholder="Teléfono"
+                                            name="tfno" id="tfno" />
                                     </li>
                                     <li class="radio">
                                         <input type="radio" name="genero"     value="h" id="hombre" />
