--- a/temas/enviado.html
+++ b/temas/enviado.html
@@ -16,13 +16,45 @@
 
 <body>
     <header>
-        <h1>Validación de Formularios con JavaScript</h1>
+        <a href="../index.html" title="Página principal">
+            <figure class="logo"></figure>
+            <h1>Validación de Formularios con JavaScript</h1>
+        </a>
+        <!-- Slogan -->
+        <p class="pechado">Curso de Confección Publicación de Páginas Web</p>
     </header>
-    <nav></nav>
+   
+    <nav>
+        <h2 class="pechado">Menú Principal</h2>
+        <input id="icon-menu" name="icon-menu" type="checkbox">
+        <label for="icon-menu" class="icon-menu" aria-label="Abrir/Pechar">Menú</label>
+        <ul>
+            <li>
+                <a href="../index.html">Inicio</a>
+            </li>
+            <li><a href="#">Temas</a>
+                <ul>
+                    <li>
+                        <a href="../temas/formularios1.html">Formularios I</a>
+                    </li>
+                    <li>
+                        <a href="../temas/formularios2.html">Formularios II</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Nosotros</a>
+            </li>
+            <li>
+                <a href="#">Contacto</a>
+            </li>
+        </ul>
+    </nav>
+
     <main>
         <article id="enviao">
             <h2>Formulario enviado !!</h2>
-            <a href="../index.html"><img src="../assets/img/pollovolador.png"></img></a>
+            <a href="../index.html" alt="enviao"><img src="../assets/img/pollovolador.png"></a>
         </article>
     </main>
     <footer>
