--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <li>
                         <a href="temas/formularios2.html">Formularios II</a>
                     </li>
+                    <li>
+                        <a href="temas/formularios3.html">Formularios III</a>
+                    </li>
                 </ul>
             </li>
             <li>
