--- a/temas/formularios2.html
+++ b/temas/formularios2.html
@@ -23,6 +23,11 @@
     <!-- Título de la pestaña del navegador -->
     <title>UF1306 | Validación de Formularios</title>
     <script src="../assets/js/formularios2.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
+
+
 </head>
 
 <body>
@@ -50,6 +55,9 @@
                     </li>
                     <li>
                         <a href="../temas/formularios2.html">Formularios II</a>
+                    </li>
+                    <li>
+                        <a href="../temas/formularios3.html">Formularios III</a>
                     </li>
                 </ul>
             </li>
