--- a/temas/formularios3.html
+++ b/temas/formularios3.html
@@ -1,29 +1,46 @@
+<!-- Declaración del tipo de documento HTML, siempre en la 1ª línea -->
 <!DOCTYPE html>
+<!-- Elemento html. Atributos lenguaje y dirección de lectura -->
 <html lang="es" dir="ltr">
+<!-- Cabecera oculta del documento web que solo ven los robots -->
 
 <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
+
+    <!-- Juego de caracteres de casi todos los idiomas humanos (incluidos ñ, tildes ...) -->
     <meta charset="utf-8" />
+    <!-- Escala inicial y renderizado _responsive_ por el ancho del dispositivo -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Compatibilidad con Microsoft Explorer -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Indéxame NO y sígueme NO -->
     <meta name="robots" content="noIndex, noFollow" />
-    <meta name="description" content="Sitio web de prueba elaborado en el curso de Confección y Publicación de Páginas Web (IFCD0110). Unidad Formativa UF1304, Elaboración de plantillas y formularios" />
-    <title>Formulario Enviado | UF1306</title>
+    <!-- Breve descripción del sitio que se verá en los resultados de búsqueda -->
+    <meta name="description" content="Sitio web de prueba elaborado en el curso de Confección y Publicación de Páginas Web (IFCD0110). Unidad Formativa UF1306 Pruebas de funcionalidades y optimización de páginas web" />
+    <!-- Ruta al favicon -->
+    <link rel="shortcut icon" href="../assets/img/dacor.png" type="image/vnd.microsoft.icon" />
+    <!-- Ruta a las hojas de estilos -->
     <link rel="stylesheet" type="text/css" href="../assets/css/application.css" />
     <link rel="stylesheet" type="text/css" href="../assets/css/formularios.css" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/enviado.css" />
+    <!-- Título de la pestaña del navegador -->
+    <title>UF1306 | Validación de Formularios</title>
+    <script src="../assets/js/formularios2.js"></script>
+
+   
 
 </head>
 
 <body>
+    <!-- El header es la cabecera de la página web lleva el único encabezado h1 de la página -->
     <header>
         <a href="../index.html" title="Página principal">
             <figure class="logo"></figure>
-            <h1>Validación de Formularios con JavaScript</h1>
+            <h1>Validación de Formularios (UF1306)</h1>
         </a>
         <!-- Slogan -->
         <p class="pechado">Curso de Confección Publicación de Páginas Web</p>
     </header>
-   
     <nav>
         <h2 class="pechado">Menú Principal</h2>
         <input id="icon-menu" name="icon-menu" type="checkbox">
@@ -39,7 +56,7 @@
                     </li>
                     <li>
                         <a href="../temas/formularios2.html">Formularios II</a>
-                    </li> 
+                    </li>
                     <li>
                         <a href="../temas/formularios3.html">Formularios III</a>
                     </li>
@@ -53,12 +70,34 @@
             </li>
         </ul>
     </nav>
+    <main id="mein">
+        <section class="tema textos agua justify">
+            <header class="portada" style="background-image: url('https://cdn.pixabay.com/photo/2016/11/17/23/29/programming-1832991_960_720.png');">
+                <h2>Validaciones de forlmularios en páginas web</h2>
+            </header>
+                <article class="article index">
+                        <h1 id="title">Forms III</h1>
+                   
 
-    <main>
-        <article id="enviao">
-            <h2>Formulario enviado !!</h2>
-            <a href="../index.html" alt="enviao"><img src="../assets/img/pollovolador.png"></a>
-        </article>
+                        <form id="form" action="" method="post">
+                            <p>
+                              <label for="name">Name <span>(required, at least 3 characters)</span></label>
+                              <input id="name" name="name" minlength="3" type="text" required:true>
+                            </p>
+                            <p>
+                              <label for="email">E-Mail <span>(required)</span></label>
+                              <input id="email" type="email" name="email" required:true>
+                            </p>
+                            <p>
+                              <input class="enviar" type="enviar" value="ENVIAR">
+                            </p>
+                        </form>
+
+
+                </article>
+
+            </section>
+        
     </main>
     <footer>
         <section class="contentinfo justify">
