--- a/temas/formularios3.html
+++ b/temas/formularios3.html
@@ -79,7 +79,7 @@
                         <h1 id="title">Forms III</h1>
                    
 
-                        <form id="form" action="" method="post">
+                        <form id="form" action="../temas/enviado.html" method="post">
                             <p>
                               <label for="name">Name <span>(required, at least 3 characters)</span></label>
                               <input id="name" name="name" minlength="3" type="text" required:true>
@@ -159,8 +159,8 @@
                 </nav>
             </div>
 
-            <a href="../index.html" target="_blank" title="Ver o sitio web de UF1303" class="no-border pattern abcenter">
-                <figure aria-label="Logo"></figure>
+            <a href="../index.html" target="_blank" title="Ver o sitio web de UF1303" class="no-border">
+                <figure aria-label="Logo" ></figure>
             </a>
         </section>
 
