--- a/temas/formularios2.html
+++ b/temas/formularios2.html
@@ -59,6 +59,9 @@
                     <li>
                         <a href="../temas/formularios3.html">Formularios III</a>
                     </li>
+                    <li>
+                        <a href="../temas/formularios4.html">Formularios IV</a>
+                    </li>
                 </ul>
             </li>
             <li>
