--- a/temas/formularios4.html
+++ b/temas/formularios4.html
@@ -82,7 +82,7 @@
                         <h1 id="title">Forms IV</h1>
                    
 
-                        <form action="enviado.html" method="post" class="form" id="form">
+                        <form action="../temas/enviado.html" method="post" class="form" id="form">
                             <fieldset>
                                 <legend>Formulario de Contacto</legend>
                                 <ul>
